# sevenzip-plugin

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
src/: error.rs  lib.rs  traits.rs  types.rs
src/windows/: com.rs  exports.rs  handler.rs  mod.rs  propvariant.rs
