[package]
name = "sevenzip-plugin"
description = "Safe Rust framework for creating 7-Zip plugins"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconutbird/sevenzip-plugin"
keywords = ["7zip", "archive", "plugin", "com"]
categories = ["compression", "os::windows-apis"]

[features]
default = []
debug = []

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.62"
